--- a/Tin.html
+++ b/Tin.html
@@ -7,6 +7,9 @@
             background-color:yellow;
             font-family:monospace;
         }
+        ul {
+            list-style-type:none;
+        }
     </style>
     <body>
         <center>
