--- a/Sources.html
+++ b/Sources.html
@@ -21,7 +21,7 @@
                 <li><a href="http://opendtuning.com/guide-to-guitar-strings/">The Guide to Guitar Strings</a></li>
                 <li><a href="http://www.ipst.gatech.edu/faculty/ragauskas_art/technical_reviews/chemical%20overview%20of%20wood.pdf">Chemical Composition of Wood</a></li>
                 <li><a href="https://pubchem.ncbi.nlm.nih.gov/compound/glucomannan">Glucomannan</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Lignin#Composition">Lignin formula</a></li>
+                <li><a href="http://www.memidex.com/lignin">Lignin formula</a></li>
             </ul>
             <p>To go back to the home page or learn more about the other parts of a guitar,
             click one of these three links.</p>
